JumpScript/tests/baselines/reference/parserErrorRecovery_ModuleElement2.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement2.jump(1,10): error TS2393: Duplicate function implementation.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement2.jump(4,10): error TS2393: Duplicate function implementation.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement2.jump(7,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement2.jump(8,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ModuleElements/parserErrorRecovery_ModuleElement2.jump (4 errors) ====
    function foo() {
             ~~~
!!! error TS2393: Duplicate function implementation.
    }
    
    function foo() {
             ~~~
!!! error TS2393: Duplicate function implementation.
    }
    
    )
    ~
!!! error TS1128: Declaration or statement expected.
    )
    ~
!!! error TS1128: Declaration or statement expected.